src/components/modus-wc-alert/modus-wc-alert.scss
/**
* This component uses Tailwind CSS and DaisyUI.
* Only add styles here that should not be applied by Tailwind, Daisy, or the theme.
*/

modus-wc-alert .modus-wc-alert {
  border-left-width: var(--modus-wc-border-width-xl);
  border-radius: var(--modus-wc-border-radius-lg);

  &.modus-wc-alert-info {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-primary) 15%,
      transparent
    );
    border-color: var(--modus-wc-color-highlight-blue);
    color: var(--modus-wc-color-base-content);
  }

  &.modus-wc-alert-error {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-error) 20%,
      transparent
    );
    border-color: var(--modus-wc-color-error);
    color: var(--modus-wc-error-content);
  }

  &.modus-wc-alert-success {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-success) 20%,
      transparent
    );
    border-color: var(--modus-wc-color-success);
    color: var(--modus-wc-success-content);
  }

  &.modus-wc-alert-warning {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-warning) 20%,
      transparent
    );
    border-color: var(--modus-wc-color-warning);
    color: var(--modus-wc-color-base-content);
  }

  .modus-wc-alert-close-icon,
  .modus-wc-alert-icon {
    height: 1.5rem;
    width: 1.5rem;
  }
}

[data-theme='modus-classic-light'] modus-wc-alert .modus-wc-alert,
[data-theme='modus-classic-dark'] modus-wc-alert .modus-wc-alert {
  border-left-width: 12px;
  border-radius: var(--modus-wc-border-radius-md);
}

[data-theme='modus-classic-light'] modus-wc-alert .modus-wc-alert {
  color: var(--modus-wc-color-trimble-gray);

  &.modus-wc-alert-info {
    background-color: var(--modus-wc-color-blue-pale);
    border-color: var(--modus-wc-color-trimble-blue);

    .modus-wc-alert-icon {
      color: var(--modus-wc-color-trimble-blue);
    }
  }

  &.modus-wc-alert-error {
    background-color: var(--modus-wc-color-red-pale);
    border-color: var(--modus-wc-color-red);

    .modus-wc-alert-icon {
      color: var(--modus-wc-color-red);
    }
  }

  &.modus-wc-alert-success {
    background-color: var(--modus-wc-color-green-pale);
    border-color: var(--modus-wc-color-green);

    .modus-wc-alert-icon {
      color: var(--modus-wc-color-green);
    }
  }

  &.modus-wc-alert-warning {
    background-color: var(--modus-wc-color-yellow-pale);
    border-color: var(--modus-wc-color-yellow-dark);

    .modus-wc-alert-icon {
      color: var(--modus-wc-color-yellow-dark);
    }
  }
}

[data-theme='modus-classic-dark'] modus-wc-alert .modus-wc-alert {
  &.modus-wc-alert-info {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-highlight-blue) 50%,
      transparent
    );
    border-color: var(--modus-wc-color-highlight-blue);
  }

  &.modus-wc-alert-error {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-red) 50%,
      transparent
    );
    border-color: var(--modus-wc-color-red);
    color: var(--modus-wc-error-content);
  }

  &.modus-wc-alert-success {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-green) 50%,
      transparent
    );
    border-color: var(--modus-wc-color-green);
    color: var(--modus-wc-success-content);
  }

  &.modus-wc-alert-warning {
    background-color: color-mix(
      in sRGB,
      var(--modus-wc-color-yellow-dark) 50%,
      transparent
    );
    border-color: var(--modus-wc-color-yellow-dark);
    color: var(--modus-wc-color-white);
  }
}

